# stamping-inspection-cameras-ctrl

./: .gitignore  main.py  pyproject.toml  run.py  utils.py
app/camerasForShuttle/: main_cameras.py  main_client.py  main_controller.py  main_server.py
app/imageSaverForShuttle/: main.py
app/log/: readerForPress.log.2025-10-17  readerForPress.log.2025-10-24
app/rabbitmqProducerForShuttle/: main.py
app/readerForPress/: main.py
app/webViewer/: main.py
camera/: __init__.py
camera/cameraForShuttle/: camera_ctrl.py  my_camera.py
config/: camera_params.yml  config.py  modbus_address.yml  mssql_setting.py  parts_info.yaml
imageSaver/: __init__.py
imageSaver/imageSaverForShuttle/: image_saver.py  models.py
migrations/models/: 0_20251020000414_init.py
modbus/: __init__.py  camera_ctrl_modbus_client.py  modbus_address.py
modbus/modbus/: async_modbus_tcp_client.py
modbus/test/: demo.py
plc/: __init__.py  press_1st_reader.py  press_head_reader.py  press_tail_reader.py
plc/plc/: __init__.py  async_plc_operator.py  plc_operator.py  s7_operation_map.py  s7_result_map.py
press/: __init__.py  part_counter.py  press_info.py  press_running_status.py  shuttle.py
rabbitmq/: __init__.py  rabbitmq_camera_consumer.py  rabbitmq_camera_producer.py
redisDb/: __init__.py  async_redis_db.py  key.py
saver/: __init__.py
test/: camera_test.py  database_test.py
udpMulticast/: __init__.py  async_udp_multicast_server.py  sync_udp_multicast_client.py
web/: __init__.py  dependencies.py  websocket_manager.py
yyDb/: __init__.py  image_info_db.py
(+15 files in other folders)
